final changes possible
this is the best i could accomplish

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="css/game.css">
 
 <body>
+	<p id"test"></p>
   <script>
     runGame(GAME_LEVELS, CanvasDisplay);
   </script>
